# django_games

./: .gitignore  LICENSE  README.md  data.py  pyproject.toml
django_games/: __init__.py  base.py  conf.py  data.py  fields.py  filters.py  ioc_data.py  rename.py  serializer_fields.py  serializers.py  test.py  test_gamefield.py  widgets.py
django_games/graphql/: types.py
django_games/locale/en/LC_MESSAGES/: django.po
django_games/templatetags/: games.py
