[tool.poetry]
name = "django-games"
version = "0.1.0"
description = "A Django application providing Game, Region, Server, and Faction fields for MMORPGs and virtual marketplaces."
authors = ["Qasem Hajizadeh <gasemhacker@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["django", "games", "mmorpg", "fields", "regions", "servers", "factions"]
homepage = "https://github.com/Qasem-h/django_games"
repository = "https://github.com/Qasem-h/django_games"
documentation = "https://github.com/Qasem-h/django_games"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3.12",
]
packages = [{ include = "django_games" }]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.0,<6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
