[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "django-games"
version = "0.3.5"
description = "Provides Game, Region, Server, and Faction fields for Django models — designed for MMORPGs, boosting, and gold marketplaces."
readme = "README.md"
authors = [{ name = "Qasem Hajizadeh", email = "gasemhacker@gmail.com" }]
license = { text = "MIT" }
keywords = ["django", "games", "mmorpg", "fields", "regions", "servers", "factions"]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]

dependencies = [
    "Django>=5.0,<6.0",
    "graphene==2.1.9",
    "graphene-django==2.16.0",
    "graphql-core==2.3.2",
    "asgiref>=3.7",
    "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/Qasem-h/django_games"
Source = "https://github.com/Qasem-h/django_games"
Issues = "https://github.com/Qasem-h/django_games/issues"

[tool.poetry]
packages = [{ include = "django_games" }]

[dependency-groups]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "djangorestframework",
    "graphene-django",
    "coverage",
]
dev = [
    { include-group = "test" },
    "ruff",
    "mypy>=1.10,<1.16",
    "django-stubs",
    "djangorestframework-stubs",
    "Pillow",
    "types-Pillow",
    "bandit",
    "black",
    "isort",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_games.tests.settings"
filterwarnings = ["ignore::DeprecationWarning:graphene"]

[tool.coverage.run]
source = ["django_games"]
omit = ["django_games/makesprite.py", "django_games/tests/settings*.py"]
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@overload", "if TYPE_CHECKING:"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disallow_untyped_calls = true
python_version = "3.12"

[tool.django-stubs]
django_settings_module = "django_games.tests.settings"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM", "PERF", "TCH", "RSE", "DJ", "T20"
]
ignore = ["DJ008"]

[tool.ruff.lint.isort]
known-first-party = ["django_games"]

[tool.bandit]
exclude_dirs = ["tests"]

